# the-hatchlor

./: .pre-commit-config.yaml  AUTHORS.md  CHANGELOG.md  LICENSE.txt  README.md  cookiecutter.json  environment.yml  test_environment.yml  test_template.sh
.github/: ISSUE_TEMPLATE.md  test_environment.yml
.github/workflows/: make-demo.yml  run-tests.yml
configs/: default.yml  lock-file.yml  proprietary.yml
hooks/: post_gen_project.py
{{cookiecutter.project_slug}}/: .changelog-config.yaml  .editorconfig  .gitignore  .gitlint  .linkcheckerrc  .pre-commit-config.yaml  AUTHORS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE.txt  README.md  mkdocs.yml  pyproject.toml
{{cookiecutter.project_slug}}/.github/: release-drafter.yml
{{cookiecutter.project_slug}}/.github/workflows/: build.yml  documentation.yml  draft.yml  labeler.yml  tests.yml
{{cookiecutter.project_slug}}/docs/: authors.md  changelog.md  contributing.md  index.md  license.md
{{cookiecutter.project_slug}}/docs/snippets/: links.txt
{{cookiecutter.project_slug}}/notebooks/: template.ipynb
{{cookiecutter.project_slug}}/src/{{cookiecutter.pkg_name}}/: __init__.py  skeleton.py
{{cookiecutter.project_slug}}/tests/: conftest.py  test_skeleton.py
